--- a/css.css
+++ b/css.css
@@ -35,3 +35,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+#defend {
+    position: absolute;
+    width: 507px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
