--- a/css.css
+++ b/css.css
@@ -26,7 +26,7 @@
     border-radius: 25px;
     position: fixed;
     margin: 10px;
-    left: 571px;   
+    left: 571px;
 }
 #attack {
     position: absolute;
@@ -41,4 +41,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+#attackback {
+  width: 557px;
+  border-radius: 23px;
 }
